css/style.css
/*!
 * Bootstrap v4.2.1 (https://getbootstrap.com/)
 * Copyright 2011-2018 The Bootstrap Authors
 * Copyright 2011-2018 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
 */
:root {
  --blue: #007bff;
  --indigo: #6610f2;
  --purple: #6f42c1;
  --pink: #e83e8c;
  --red: #dc3545;
  --orange: #fd7e14;
  --yellow: #ffc107;
  --green: #28a745;
  --teal: #20c997;
  --cyan: #17a2b8;
  --white: #fff;
  --gray: #6c757d;
  --gray-dark: #343a40;
  --primary: #007bff;
  --secondary: #6c757d;
  --success: #28a745;
  --info: #17a2b8;
  --warning: #ffc107;
  --danger: #dc3545;
  --light: #f8f9fa;
  --dark: #343a40;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  }

*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

html {
  font-family: 'Argentum Sans', sans-serif;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }

article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
  display: block; }
 

body {
  margin: 0;
  font-family: "Argentum Sans", sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #212529;
  text-align: left;
  background-color: #ECF0F1; }

[tabindex="-1"]:focus {
  outline: 0 !important; }


  .paragraph-container {
    display: flex;
    display: flex;
    justify-content: center; /* Center the paragraphs */
    align-items: center; /* Center vertically */
    flex-wrap: wrap; /* Allow paragraphs to wrap to the next line */
}
.home-video {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 600px;
  background-size: cover;
  position: relative;

}
.background-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw; /* 100% of viewport width */
  height: 100vh; /* 100% of viewport height */
  object-fit: cover;
  z-index: -1; /* Ensure the image is behind other content */
}


@media (max-width: 768px) {
  .home-video {
    height: 270px; 
    width: auto;
    
  }
  .background-image {
    position: absolute;
    width: 100%; /* 100% of viewport width */
    height: 100%; /* 100% of viewport height */
    object-fit: cover;
    z-index: -1; /* Ensure the image is behind other content */
  }
}

.home-video .overlay {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.home-video .container {
  position: relative;
  z-index: 1;
  text-align: center;
  color: white;
  
}

.home-video .col-md-8 {
  text-align: center;
}
.paragraph {
    flex: 1;
    margin: 10px;
    text-align: center;
    justify-content: center;
    display: flex;
    border-radius: 10px; /* Add rounded corners */
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add 3D effect */
}
@media (max-width: 768px) {
  .paragraph-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    padding-right: 20px;
    padding-left: 0px;
    
  }

  .paragraph {
    width: 100%;
    max-width: none;
    margin-bottom: 20px; /* Add space between paragraphs */
    border-radius: 10px; /* Add rounded corners */
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add 3D effect */
  }

}


hr {
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
  height: 0;
  overflow: visible; }





h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
  font-family: 'Bebas Neue', sans-serif !important;
  font-weight: normal;
  font-style: normal;
letter-spacing:1px ; }

p {
  margin-top: 0;
  margin-bottom: 1rem; }

abbr[title],
abbr[data-original-title] {
  text-decoration: underline;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
  cursor: help;
  border-bottom: 0;
  text-decoration-skip-ink: none; }

address {
  margin-bottom: 1rem;
  font-style: normal;
  line-height: inherit; }

ol,
ul,
dl {
  margin-top: 0;
  margin-bottom: 1rem; }

ol ol,
ul ul,
ol ul,
ul ol {
  margin-bottom: 0; }

dt {
  font-weight: 700; }

dd {
  margin-bottom: .5rem;
  margin-left: 0; }

blockquote {
  margin: 0 0 1rem; }

b,
strong {
  font-weight: bolder; }

small {
  font-size: 80%; }

sub,
sup {
  position: relative;
  font-size: 75%;
  line-height: 0;
  vertical-align: baseline; }

sub {
  bottom: -.25em; }

sup {
  top: -.5em; }

a {
  color: #EAEDED ;
  text-decoration: none;
  background-color: transparent; }
  a:hover {
    color: #EAEDED ;
    text-decoration: underline; }

a:not([href]):not([tabindex]) {
  color: inherit;
  text-decoration: none; }
  a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
    color: inherit;
    text-decoration: none; }
  a:not([href]):not([tabindex]):focus {
    outline: 0; }

pre,
code,
kbd,
samp {
  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  font-size: 1em; }

  .custom-bg {
    background-color: 
    #EAEDED  ; 
    /* Use your preferred shade of grey here */
}

pre {
  margin-top: 0;
  margin-bottom: 1rem;
  overflow: auto; }

figure {
  margin: 0 0 1rem; }

img {
  vertical-align: middle;
  border-style: none; }

svg {
  overflow: hidden;
  vertical-align: middle; }

table {
  border-collapse: collapse; }

caption {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  color: #6c757d;
  text-align: left;
  caption-side: bottom; }

th {
  text-align: inherit; }

label {
  display: inline-block;
  margin-bottom: 0.5rem; }

button {
  border-radius: 0; }

button:focus {
  outline: 1px dotted;
  outline: 5px auto -webkit-focus-ring-color; }

input,
button,
select,
optgroup,
textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit; }

button,
input {
  overflow: visible; }

button,
select {
  text-transform: none; }

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button; }
/* ... */

